--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2> Web Experience</h2>
         <p> "The last time when I worked with web technologies was 2 years back when I was doing my bachelor's, I'm excited to delve back into the world of web development and continue my learning journey and also looking forward to learn and collaborate with my classmates in this course"</p>
     <a href="#">Lab1</a>
+    <a href="#">Lab2</a>
 
     </div>
 
